Structural changes & sensor class added